--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/ideastarter?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=ideastarter
+spring.datasource.password=ideastarter
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
