--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
+liquibase.change-log=classpath:db/changelog-master.xml
