--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
 liquibase.change-log=classpath:db/changelog-master.xml
+spring.messages.basename=validation
+spring.aop.proxy-target-class=true
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
