--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,5 @@
 NotEmpty=This field is required.
-Size.userForm.login=Please use between 2 and 32 characters.
-Duplicate.userForm.login=Someone already has that login.
+Size.userForm.username=Please use between 2 and 32 characters.
+Duplicate.userForm.username=Someone already has that login.
 Size.userForm.password=Try one with at least 2 characters.
-Diff.userForm.confirmPassword=These passwords don't match.
+Diff.userForm.passwordConfirm=These passwords don't match.
