--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>com.starter.Application</mainClass>
+        </configuration>
       </plugin>
 
     </plugins>
